added the second blog

--- a/Blogs.html
+++ b/Blogs.html
@@ -6,7 +6,7 @@
     <title>My Developer Blogs</title>
 
 
-    <link rel="stylesheet" href="Blogs.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* .blog{
             background-color: aquamarine;
@@ -61,6 +61,11 @@
     <li>Margin</li>
     <li>Padding</li>
     <li>Height and Width</li>
+
+
+
    </ol>
+
+   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam alias voluptates est delectus et ipsa dignissimos, aliquam explicabo consequatur, magnam illum molestias voluptas praesentium dolor nisi, odit necessitatibus ad sapiente. Quis asperiores sunt aut consectetur nulla, deserunt voluptatum nemo ut beatae velit? Doloremque commodi laboriosam impedit ipsam repellat est non earum, id tenetur fugit? Odit explicabo officiis sed architecto accusamus, nesciunt saepe earum, unde quaerat eius placeat esse debitis corporis. Tempora quisquam repellendus debitis dolorum soluta? Exercitationem laudantium doloremque nesciunt harum quasi voluptas ipsam consequuntur est consectetur culpa distinctio, veniam voluptatem officiis nostrum nihil labore accusamus nisi natus? Eligendi voluptatibus nam id illum totam! Alias tempore voluptas illum tenetur, aut officiis veniam beatae, amet obcaecati, dolores ex earum consequatur maiores aspernatur sit id explicabo. Blanditiis in fuga recusandae nesciunt ex nam vero minima beatae quam iste facere, illum odio laboriosam amet rem quibusdam laudantium commodi nihil culpa dolorum? Error, odit eaque rem sint totam excepturi neque dolor blanditiis, odio aspernatur reiciendis eligendi sunt at ipsum iste tempora hic vel accusamus aut, minima ipsam soluta? Nostrum nesciunt enim sint. Ut recusandae labore nemo, corporis perferendis similique delectus officiis, iste quaerat nostrum aliquam harum quisquam fugit molestias quibusdam vero ipsam hic? Ipsa.</h1>
 </body>
 </html>
